Add files and add place information

--- a/war/css/wedding919.less
+++ b/war/css/wedding919.less
@@ -29,9 +29,15 @@ body {
     margin-bottom: 0;
     line-height: 40px;
 }
+
+.map {
+    max-width: 730px;
+    height: 400px;
+}
 /* Custom page footer */
 
 .footer {
+    margin-top: 15px;
     padding-top: 19px;
     color: #777;
     border-top: 1px solid #e5e5e5;
@@ -53,8 +59,8 @@ body {
 .avatar {
     margin-top: 20px;
     margin-bottom: 30px;
-    height: 300px;
-    width: 300px;
+    height: 275px;
+    width: 275px;
     background-image: url(../img/avatar01.png);
     background-repeat: no-repeat;
     background-position: center;
@@ -86,12 +92,16 @@ body {
 }
 /* Supporting marketing content */
 
-.marketing {
-    margin: 40px 0;
-}
-
-.marketing p + h4 {
-    margin-top: 28px;
+#section_place {
+    .lunch-time {
+        font-size: 1.2em;
+    }
+    p {
+        padding-left: 8px;
+    }
+    address {
+        font-size: 1.1em;
+    }
 }
 /* Responsive: Portrait tablets and up */
 
