add photo feature

--- a/war/css/wedding919.less
+++ b/war/css/wedding919.less
@@ -31,7 +31,9 @@ body {
 }
 
 .map {
-    max-width: 730px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 700px;
     height: 400px;
 }
 /* Custom page footer */
@@ -91,6 +93,29 @@ body {
     font-size: 21px;
 }
 /* Supporting marketing content */
+
+#section_photo {
+    p {
+        padding-left: 8px;
+        font-size: 1.2em;
+        text-align: center;
+    }
+    li {
+        display:inline-block;
+        text-align: center;
+        margin-bottom: 20px;
+        span {
+            font-size: 1.2em;
+        }
+    }
+    #links a {
+        img {
+            max-width: 150px;
+            max-height: 150px;
+            overflow-y: hidden;
+        }
+    }
+}
 
 #section_place {
     .lunch-time {
