--- a/war/css/wedding919.less
+++ b/war/css/wedding919.less
@@ -14,6 +14,10 @@ body {
 }
 /* Everything but the jumbotron gets side spacing for mobile first views */
 
+.gform {
+    font-family: 'cwTeXHei', serif !important;
+}
+
 .container {
     min-width: 300px;
 }
@@ -81,7 +85,9 @@ body {
     margin-left: auto;
     margin-right: auto;
 }
-.nav, section {
+
+.nav,
+section {
     font-family: 'cwTeXHei', serif;
 }
 
