--- a/war/css/wedding919.less
+++ b/war/css/wedding919.less
@@ -138,9 +138,8 @@ section {
     }
     #links a {
         img {
-            max-width: 150px;
             max-height: 150px;
-            overflow-y: hidden;
+            width: auto;
         }
     }
 }
