--- a/war/css/wedding919.less
+++ b/war/css/wedding919.less
@@ -136,10 +136,15 @@ section {
             font-size: 1.2em;
         }
     }
-    #links a {
-        img {
-            max-height: 150px;
-            width: auto;
+    #links {
+        span {
+            font-size: 0.9em;
+        }
+        a {
+            img {
+                max-height: 150px;
+                width: auto;
+            }
         }
     }
 }
