add background color

--- a/war/css/wedding919.less
+++ b/war/css/wedding919.less
@@ -75,6 +75,7 @@ body {
     margin-bottom: 30px;
     height: 275px;
     width: 275px;
+    background-color: #FFD800;
     background-image: url(../img/avatar01.png);
     background-repeat: no-repeat;
     background-position: center;
