--- a/war/css/wedding919.less
+++ b/war/css/wedding919.less
@@ -104,6 +104,13 @@ section {
     color: #AAA;
 }
 
+@media (max-width: 400px) {
+    .nav-tabs li a {
+        padding-left: 7px;
+        padding-right: 7px;
+    }
+}
+
 .jumbotron {
     padding-top: 10px;
     text-align: center;
