update css and wording

--- a/war/css/wedding919.less
+++ b/war/css/wedding919.less
@@ -109,6 +109,18 @@ section {
         padding-left: 7px;
         padding-right: 7px;
     }
+    #section_main h1 {
+        font-size: 3.2em;
+    }
+    .cheers h3 {
+        font-size: 2.2em;
+    }
+}
+
+@media (max-width: 500px) {
+    .nav-tabs li a {
+        margin-bottom: 20px;
+    }
 }
 
 .jumbotron {
