replace some images

--- a/war/css/wedding919.less
+++ b/war/css/wedding919.less
@@ -150,8 +150,9 @@ section {
         text-align: center;
     }
     li {
+        min-height: 175px;
         display: inline-block;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
         span {
             font-size: 1.2em;
         }
